--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "karma-webpack": "1.7.0",
     "node-sass": "^3.8.0",
     "null-loader": "0.1.1",
+    "path": "^0.12.7",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
